# deepflite

./: CMakeLists.txt  README.md
caffe/NIPS2015/: solver.prototxt  train.sh
caffe/NIPS2015/protofiles/: alexnet_im-to-alt.prototxt  rnn_all_raw_to_ekf.prototxt  vgps_im-to-alt.prototxt
ext/: CMakeLists.txt
ext/apriltags/cmake/: pods.cmake
ext/mavlink/: CMakeLists.txt  serial_port.cpp  serial_port.h
ext/mavlink/common/: version.h
matlab/: addpaths.m
matlab/@Blob/: Blob.m  blackout.m  cat.m  catCaffe.m  dim.m  drawLine.m  getCaffe.m  imResize.m  len.m  listFileNames.m  loadMeanVar.m  meanVar.m  normalize.m  play.m  readH5.m  record.m  saveH5.m  saveMeanVar.m  unnormalize.m
matlab/data_collection/: preprocess_all.m  preprocess_flashlog.m
python/: viz_pose.py
scripts/: mv_last.sh  show_time.sh
src/: CMakeLists.txt
src/camera/: CMakeLists.txt  compute_pose.cpp  intrinsic_calib.cpp  show.cpp  utils.cpp  utils.h
src/common/: CMakeLists.txt  utils.cpp  utils.h
src/telemetry/: CMakeLists.txt  MavlinkInterface.cpp  MavlinkInterface.h
